<resources>
    <string name="app_name">WateringV2</string>
    <string name="turn_on_pump">TURN ON</string>
    <string name="turn_off_pump">TURN OFF</string>
    <string name="reset">RESET</string>
    <string name="no_data_for_the_last_3_days">No data</string>
    <string name="temperature_statistics_for_the_last_1_hour">Temperature statistics</string>
    <string name="statistics_of_air_humidity_for_the_last_1_hour">Statistics of air humidity</string>
    <string name="air_humidity_statistics">Air humidity statistics</string>
    <string name="soil_moisture_statistics_for_the_last_1_hour">Soil moisture statistics</string>
    <string name="soil_moisture_statistics">Soil moisture statistics</string>
    <string name="temperature_c">Temperature (°C)</string>
    <string name="air_humidity">Air humidity (%)</string>
    <string name="soil_moisture">Soil moisture (%)</string>
    <string name="statistics_of_the_last_1_hour">Statistics</string>
    <string name="statistical">Statistical</string>
    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="average">Average</string>
    <string name="temperature_statistics">Temperature statistics</string>
    <string name="humidity">Humidity</string>
    <string name="no_chart_data_available">No chart data available</string>
    <string name="logout">Log out</string>
    <string name="pump">Pump</string>
    <string name="temperature">Temperature</string>
    <string name="settings">SETTINGS</string>
    <string name="custom_your_settings">Custom your settings</string>
    <string name="pump_duration">Pump Duration</string>
    <string name="firebase_data_interval">Firebase Data Interval</string>
    <string name="reset_hardware">Reset Hardware</string>
    <string name="clear_command">Clear Command</string>
    <string name="clear_sensor">Clear Sensor</string>
    <string name="save_settings">Save Settings</string>
    <string name="auto_pump">Auto Pump</string>
    <string name="height_water_tank">Height Water Tank</string>
</resources>