<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".fragments.SettingFragment">

    <!-- CardView chứa tiêu đề -->
    <androidx.cardview.widget.CardView
        android:id="@+id/title_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white">

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:padding="8dp"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/settings"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/black" />-->

<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/custom_your_settings"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textColor="@color/black"/>&ndash;&gt;-->
<!--        </LinearLayout>-->
    </androidx.cardview.widget.CardView>

    <!-- CardView chứa phần chọn thời gian bơm -->
    <androidx.cardview.widget.CardView
        android:id="@+id/pump_time_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_card"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pump_duration"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/pump_duration_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pump_durations" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView chứa phần chọn khoảng thời gian Firebase -->
    <androidx.cardview.widget.CardView
        android:id="@+id/firebase_interval_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pump_time_card"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firebase_data_interval"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/firebase_interval_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/firebase_intervals" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView chứa phần chọn tự động bơm -->
    <androidx.cardview.widget.CardView
        android:id="@+id/auto_pump_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firebase_interval_card"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_pump"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/auto_pump_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/height_water_pump_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_pump_card"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height_water_tank"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/height_water_pump"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- GridLayout chứa các nút -->
    <GridLayout
        android:id="@+id/button_grid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_water_pump_card"
        android:columnCount="2"
        android:layout_margin="8dp">

        <!-- Nút Reset ESP32 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/reset_hardware"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Nút Clear Command -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/clearCommandButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/clear_command"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Nút Clear Sensor Data -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/clearSensorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/clear_sensor"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Nút Logout -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:id="@+id/button_grid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_grid1"
        android:columnCount="1"
        android:layout_margin="8dp">

        <!-- Nút Save Settings -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="0dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/saveSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/save_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:enabled="false" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>


</RelativeLayout>